ci: print line numbers for lint job
golanci-lint action job uses a custom format to annotate code within
GitHub, we can override it (forcefully) to achieve the desired output
(file and line numbers for lint issue in the output).

https://github.com/golangci/golangci-lint-action/issues/119#issuecomment-981090648

fixes https://github.com/kcp-dev/kcp/issues/634

Signed-off-by: jbpratt <jbpratt78@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,7 +64,7 @@ jobs:
       - uses: golangci/golangci-lint-action@v2
         with:
           only-new-issues: true
-          args: --timeout=5m
+          args: --timeout=5m --out-${NO_FUTURE}format colored-line-number
 
   codegen:
     name: codegen
